WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307898
[GLIB] Tentative fix for the Debian and Ubuntu stable build
https://bugs.webkit.org/show_bug.cgi?id=307898
Summary
[GLIB] Tentative fix for the Debian and Ubuntu stable build
Claudio Saavedra
Reported
2026-02-14 00:23:55 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-02-14 00:24:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58715
EWS
Comment 2
2026-02-14 00:38:30 PST
Committed
307563@main
(89ced539bb2b): <
https://commits.webkit.org/307563@main
> Reviewed commits have been landed. Closing PR #58715 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug