[GLIB] Tentative fix for the Debian and Ubuntu stable build https://bugs.webkit.org/show_bug.cgi?id=307898

Unreviewed build fix after 307354@main

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphicsGLib.cpp:

Canonical link: https://commits.webkit.org/307563@main